tests/ui/underscore-lifetime/dyn-trait-underscore-in-struct.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/dyn-trait-underscore-in-struct.rs:9:24
   |
LL |     x: Box<dyn Debug + '_>,
   |                        ^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ struct Foo<'a> {
LL ~     x: Box<dyn Debug + 'a>,
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
